RESOLVED FIXED205048
[LFC][IFC] Fix fast/text/simple-line-layout-hyphenation-constrains.html
https://bugs.webkit.org/show_bug.cgi?id=205048
Summary [LFC][IFC] Fix fast/text/simple-line-layout-hyphenation-constrains.html
alan
Reported 2019-12-09 20:01:00 PST
ssia
Attachments
Patch (2.02 KB, patch)
2019-12-09 20:07 PST, alan
koivisto: review+
Radar WebKit Bug Importer
Comment 1 2019-12-09 20:01:34 PST
alan
Comment 2 2019-12-09 20:07:16 PST
alan
Comment 3 2019-12-10 06:38:13 PST
Note You need to log in before you can comment on or make changes to this bug.