[LFC][IFC] Fix fast/text/simple-line-layout-hyphenation-constrains.html https://bugs.webkit.org/show_bug.cgi?id=205048 <rdar://problem/57780425>

Reviewed by Antti Koivisto.

Remove this hack for now and come up with a more sensible fix later if it breaks some tests.

* layout/inlineformatting/InlineLineBreaker.cpp:
(WebCore::Layout::LineBreaker::tryBreakingTextRun const):

Canonical link: https://commits.webkit.org/218267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253323 268f45cc-cd09-0410-ab3c-d52691b4dbfc